add discussion of tissue specificity index

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -14,6 +14,7 @@
 \acrodef{GSE}{Gene Set Enrichment}
 \acrodef{OU}{Ornstein-Uhlenbeck}
 \acrodef{OUCH}{\ac{OU} Comparative Hypotheses}
+\acrodef{TSI}{Tissue Specificity Index}
 
 %%% Local Variables:
 %%% mode: latex
