add sra archive

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -15,6 +15,7 @@
 \acrodef{OU}{Ornstein-Uhlenbeck}
 \acrodef{OUCH}{\ac{OU} Comparative Hypotheses}
 \acrodef{TSI}{Tissue Specificity Index}
+\acrodef{SRA}{Sequence Read Archive}
 
 %%% Local Variables:
 %%% mode: latex
