--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -155,13 +155,14 @@ for (a in paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utilit
 }
 @ 
 
-<<load.data,echo=FALSE,results="hide",cache.extra=tools::md5sum(paste0("../data/",c("combined_fpkm","gene_trees","housekeeping_genes_superset","placenta_core_transcriptome","placenta_go_results_bp","placenta_go_results_mf","hugo_nomenclature")))>>=
+<<load.data,echo=FALSE,results="hide",cache.extra=tools::md5sum(paste0("../data/",c("combined_fpkm","gene_trees","housekeeping_genes_superset","placenta_core_transcriptome","placenta_go_results_bp","placenta_go_results_mf","hugo_nomenclature","gene_annotation")))>>=
 for (a in paste0("../data/",c("combined_fpkm","gene_trees",
                               "housekeeping_genes_superset",
                               "placenta_core_transcriptome",
                               "placenta_go_results_bp",
                               "placenta_go_results_mf",
-                              "hugo_nomenclature"
+                              "hugo_nomenclature",
+                              "gene_annotation"
                               ))) {
     load(a)
 }
